--- a/jq轮播图.html
+++ b/jq轮播图.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>jquery轮播图</title>
@@ -75,7 +75,7 @@
 	<button class="down">></button>
 </div>
 	
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
 <script type="text/javascript">
 	$(function(){
 		var i = 0;
