--- a/计算机.html
+++ b/计算机.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     
-    <script src="../jquery-3.4.1.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
     <script type="text/javascript">
     	$(function(){
     		//添加事件
